--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
+                 <li><a href="{{ site.url }}/assets/Amelia Tarren_CV_2May2019.docx">CV</a></li>
                 <li><a href="/blog">Blog</a></li>
             </ul>
         </nav>
