--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,4 +18,14 @@
             {{ content }}
         </div><!-- /.container -->
     </body>
+    <div class="container container-left">
+    <div class="row">
+        <div class="col-md-3 hidden-xs">
+            {% include sidebar.html %}
+        </div>
+        <div class="col-md-9">
+            {{ content }}
+        </div>
+    </div>
+</div>
 </html>
