--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{{ page.title }}</title>
-        <!-- link to main stylesheet -->
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-    </head>
-     <div class="container container-left">
-    <div class="row">
-        <div class="col-md-3 hidden-xs">
-            {% include sidebar.html %}
-        </div>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                 <li><a href="{{ site.url }}/cv/CV_A.Tarren_04Apr20.pdf">CV</a></li>
-                <li><a href="/blog">Blog</a></li>
+---
+layout: default
+---
+
+<div class="well">
+{%for post in site.posts %}
+    {% unless post.next %}
+        <h1>{{ post.date | date: '%Y' }}</h1>
+        <ul>
+    {% else %}
+        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+        {% if year != nyear %}
             </ul>
-        </nav>
-        <div class="container">
-            {{ content }}
-        </div><!-- /.container -->
-    </body>
-</html>
+            <h1>{{ post.date | date: '%Y' }}</h1>
+            <ul>
+        {% endif %}
+    {% endunless %}
+    <li><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d" }} - {{ post.title }}</a></li>
+{% endfor %}
+</ul>
+</div>
