--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,5 @@
 <figure class="image">
+    <p align="center">
     <img style='height: 85%; width: 85%; object-fit: contain' src="{{ include.url }}" alt="{{ include.description }}">
     <figcaption>{{ include.description }}</figcaption>
 </figure>
