--- a/_includes/image.html
+++ b/_includes/image.html
@@ -3,4 +3,4 @@
     <img style='height: 85%; width: 85%; object-fit: contain' src="{{ include.url }}" alt="{{ include.description }}">
     <p align="center">
     <figcaption>{{ include.description }}</figcaption>
-
+    <p align="center">
