--- a/_includes/image.html
+++ b/_includes/image.html
@@ -2,7 +2,7 @@
     <p align="center">
     <img style='height: 75%; width: 75%; object-fit: contain' src="{{ include.url }}" alt="{{ include.description }}">
     <p align="center">
-    <figcaption>{{ include.description }}
+    <figcaption>{{ include.description:center }}
     <p align="center">
     </figcaption>
 
